k8s-apps/utilities/personal-site/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: personal-site
  labels:
    app.kubernetes.io/name: personal-site
    app.kubernetes.io/part-of: utilities
    app.kubernetes.io/managed-by: argocd
