k8s-apps/utilities/personal-site/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-site
  namespace: personal-site
  labels:
    app.kubernetes.io/name: personal-site
    app.kubernetes.io/part-of: utilities
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: personal-site
  template:
    metadata:
      labels:
        app.kubernetes.io/name: personal-site
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: personal-site
          image: quay.io/kmulliken/personal-site@sha256:8512e1451392ddf57adde2e20c808df2938fb15685172135502647f4ecf6346a
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
